<resources>
    <string name="app_name">Mi Casa</string>
    <string name="log_usu">Usuario</string>
    <string name="log_cod_casa">Código Seguridad Casa</string>
    <string name="log">Login</string>
    <string name="log_reg">Registrar Usuario</string>
    <string name="log_no_rec">No recuerdo mi contraseña</string>
    <string name="log_contr">Contraseña</string>
    <string name="log_recordar">Recordar</string>

    <string name="reg_titl">Alta Habitante Casa</string>
    <string name="reg_usu">Usuario</string>
    <string name="reg_pass">Password</string>
    <string name="reg_nom">Nombre</string>
    <string name="reg_apell">Apellidos</string>
    <string name="reg_email">Email</string>
    <string name="reg_contr">Contraseña Casa</string>
    <string name="reg_reg">Registro</string>
    <string name="error_password">Contraseña no válida</string>
    <string name="error_field_required">Campo requerido</string>
    <string name="error_usuario">Usuario en uso</string>
    <string name="error_password_length">Contraseña como minimo de 6 caracteres</string>
    <string name="formato_email">El email introducido no es correcto</string>
    <string name="error_incorrect_password_Usu">Contraseña o Usuario Incorrecta</string>

    <string name="princ_bloq">Armar </string>
    <string name="princ_bloq_sub">Activar la Alarma</string>
    <string name="princ_desbloq">Desarmar </string>
    <string name="princ_desbloq_sub">Desactivar la Alarma</string>
    <string name="princ_casa">Casa </string>
    <string name="princ_casa_sub">Activar cuando se encuentre en casa</string>
    <string name="princ_disp">Dispositivos</string>
    <string name="princ_disp_sub">Gestionar Dispositivos</string>
    <string name="princ_panic">Alarma</string>
    <string name="princ_panic_sub">Activar la Alarma, de dos toques</string>
    <string name="princ_cerrar_sesion">Cerrar Sesión</string>
    <string name="cancelar">Cancelar</string>
    <string name="no_disponible">No disponible</string>


    <string name="title_activity_nav_princ">NavPrincActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Acerca de</string>
    <string name="hello_blank_fragment">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="introduzca_aqu_el_nombre_de_su_casa">Introduzca aquí el nombre de su Casa</string>
    <string name="nombre">Nombre</string>
    <string name="a_adir">Añadir</string>
    <string name="usuarios">Usuarios</string>
    <string name="notificaciones">Notificaciones</string>
    <string name="mi_casa">Mi Casa</string>
    <string name="chat">Chat</string>
    <string name="no_hay_usuarios">No hay usuarios</string>
    <string name="datos_de_usuario">Datos De Usuario</string>
    <string name="password">Password</string>
    <string name="admin">Admin</string>
    <string name="usuario">Usuario</string>
    <string name="actualiza">Actualiza</string>
    <string name="si">Si</string>
    <string name="no">No</string>
    <string name="apellidos">Apellidos</string>
    <string name="esta_seguro_que_desea_borrar_su_usuario">¿Esta seguro que desea borrar su usuario</string>
    <string name="eliminar">Eliminar</string>
    <string name="advertencia">Advertencia:</string>
    <string name="si_elimina_su_usuario_se_redirigir_a_la_pantalla_de_login">Si elimina su usuario se redirigirá a la pantalla de login</string>
    <string name="Id">Id</string>
    <string name="a_adir_dispositivos">Añadir Dispositivos</string>
    <string name="disp">Dispositivos</string>
    <string name="introduzca_los_datos">Introduzca los Datos</string>
    <string name="contrase_a_wifi">Contraseña Wifi</string>
    <string name="nombre_casa">Nombre Casa</string>
    <string name="datos_del_router_wifi">Datos del Router Wifi</string>
    <string name="identificador_de_la_red_ssid">Identificador de la Red (SSID)</string>


    <string name="tvApSsidTitle">SSID: </string>
    <string name="tvPasswordTitle">Password: </string>
    <string name="switchIsSsidHiddenTitle">SSID esta Oculto</string>
    <string name="spinnerTaskResultCountTitle">Dispositivos a Añadir</string>
    <string name="btnConfirmTitle">Asociar Dispositivos</string>
    <string name="mostrar_dispositivos">Mostrar Dispositivos</string>
    <string name="conexion_de_dispositivos_a_la_red">Conexion de Dispositivos a la Red</string>
    <string name="nombre_del_dispositivo">Nombre</string>
    <string name="habitaci_n">Habitación</string>
    <string name="no_existen_dispositivos_para_a_adir">No Existen más Dispositivos para añadir</string>
    <string name="no_existen_dispositivos">No existen Dispositivos</string>
    <string name="no_existen_camaras">No existen Cámaras</string>
    <string name="email">Email</string>
    <string name="introduzca_su_email_para_recuperar_la_contrase_a">Introduzca su Email para recuperar la Contraseña</string>
    <string name="email_incorrecto">El Email introducido no es válido</string>
    <string name="mis_claves">Mis Claves</string>
    <string name="cargando">Cargando</string>
    <string name="informacion_claves">Para poder añadir las casas de manera que la gestión sea de manera individual, usar la key propia de cada una. Pero en caso de querer
    la gestión de las casas como un bloque, elegir la misma key para su registro(Elegir una y usar siempre dicha key)</string>
    <string name="casa">Casa:   </string>
    <string name="clave_dos_puntos">Clave:   </string>
    <string name="introduce_aqui_tu_key">Introduce aquí</string>
    <string name="key_2">Key 2</string>
    <string name="key_1">Key 1</string>
    <string name="sin_claves_registradas">Sin claves registradas</string>
    <string name="clave">Clave</string>
    <string name="registrar">Registrar</string>
    <string name="continuar">Continuar</string>
    <string name="acerca_de">Acerca de</string>
    <string name="comun_cate">Comunícate</string>
    <string name="sesi_n">Sesión</string>
    <string name="desea_darle_valores_nuevos">¿Desea darle valores nuevos?</string>
    <string name="Usuarios">Usuarios</string>
    <string name="Principal">Principal</string>
    <string name="Notificaciones">Notificaciones</string>
    <string name="Claves">Claves</string>
    <string name="MisDatos">Mis Datos</string>
    <string name="Disp">Dispositivo</string>
    <string name="conexGestion">Conexión y Gestión</string>
    <string name="accion">Acción</string>
    <string name="interruptores">Interruptores</string>
    <string name="acercaDe">Aplicación diseñada por:\nRafael Arroyo Alemán\nAlumno de Ingeniería Informática de Computadores por la Universidad de Sevilla</string>
    <string name="title_activity_camara">CamaraActivity</string>
    <string name="galer_a">Galería</string>

</resources>
