<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_usuarios"
            android:icon="@drawable/ic_contacts_black_24dp"
            android:title="@string/usuarios" />
        <item
            android:id="@+id/nav_notificaciones"
            android:icon="@drawable/ic_email_black_24dp"
            android:title="@string/notificaciones" />
        <item
            android:id="@+id/nav_micasa"
            android:icon="@drawable/ic_home_black_menu_24dp"
            android:title="@string/mi_casa" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_chat"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/chat" />
        </menu>
    </item>
        <item
            android:id="@+id/cerrar_sesion"
            android:icon="@drawable/ic_exit_to_app_black_24dp"
            android:title="@string/princ_cerrar_sesion" />

</menu>
