<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp">

    <TextView
        android:id="@+id/tvAdvertenciaUsu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/esta_seguro_que_desea_borrar_su_usuario"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteY="16dp" />

    <Button
        android:id="@+id/btAdvertenciaUsuario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/eliminar"
        android:layout_gravity="center"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="148dp"
        tools:layout_editor_absoluteY="44dp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/advertencia"
        android:layout_gravity="center"/>

    <TextView
        android:id="@+id/tvAdvetenciaUsuario2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/si_elimina_su_usuario_se_redirigir_a_la_pantalla_de_login"
        android:layout_gravity="center"/>

</LinearLayout>