<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:padding="20dp"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/edt_nueva_clave"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="20dp"
        android:hint="@string/introduce_aqui_tu_key"/>
<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal">
    <Button
        android:id="@+id/bt_reg_clave"
        style="@android:style/Widget.Material.Light.Button.Toggle"
        android:onClick="onClickRegistraClave"
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:text="@string/reg_reg" />
    <Button
        android:id="@+id/bt_elimina_clave"
        style="@android:style/Widget.Material.Light.Button.Toggle"
        android:onClick="onClickEliminaClave"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="100dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:text="@string/eliminar" />
</LinearLayout>

</LinearLayout>