<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tvDispNuevoAnade"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/Base.TextAppearance.AppCompat.Body2"
        android:text="Ubicación del Dispositivo"
        android:layout_gravity="center"
        android:textSize="25sp"
        tools:layout_editor_absoluteX="163dp"
        tools:layout_editor_absoluteY="16dp" />

    <EditText
        android:id="@+id/etNombreDispNuevo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_gravity="center"
        android:inputType="textPersonName"
        android:hint="@string/nombre_del_dispositivo"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="35dp" />

    <EditText
        android:id="@+id/etHabitacionDispNuevo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_gravity="center"
        android:inputType="textPersonName"
        android:hint="@string/habitaci_n"
        app:layout_constraintEnd_toEndOf="@+id/editText"
        app:layout_constraintStart_toStartOf="@+id/editText"
        tools:layout_editor_absoluteY="90dp" />

    <Button
        android:id="@+id/btnAnadeDispNuevo"
        android:layout_width="wrap_content"
        android:layout_gravity="center"
        android:background="@color/colorPrimary"
        android:layout_marginTop="20dp"
        android:layout_height="wrap_content"
        android:text="@string/a_adir" />

</LinearLayout>