<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:padding="20dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tv_informacion_key"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/informacion_claves"
        tools:layout_editor_absoluteX="136dp"
        tools:layout_editor_absoluteY="87dp"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/iconHome1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            app:srcCompat="@drawable/ic_home_black_menu_24dp" />

        <ImageView
            android:id="@+id/iconHome2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_home_black_menu_24dp" />

        <ImageView
            android:id="@+id/iconHome3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="150dp"
            app:srcCompat="@drawable/ic_home_black_menu_24dp" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/textView6"
            android:layout_marginLeft="60dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/key_1" />

        <TextView
            android:id="@+id/textView7"
            android:layout_marginLeft="150dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/key_2" />
    </LinearLayout>
</LinearLayout>